Machine Learning Internship

--- a/src/decision-tree-implimentation.ipynb
+++ b/src/decision-tree-implimentation.ipynb
@@ -295,6 +295,7 @@
     "plt.xlabel('Predicted')\n",
     "plt.ylabel('Actual')\n",
     "plt.title('Confusion Matrix')\n",
+    "plt.savefig('confusion_matrix.png', bbox_inches='tight')\n",
     "plt.show()\n",
     "\n",
     "# Classification Report\n",
@@ -359,6 +360,7 @@
     "          rounded=True,\n",
     "          fontsize=10)\n",
     "plt.title('Decision Tree Visualization', fontsize=18)\n",
+    "plt.savefig('decision_tree_visualization.png', bbox_inches='tight')\n",
     "plt.show()\n",
     "\n",
     "print(\"\\n--- Interpreting the Decision Tree ---\")\n",
